// Copyright 2020 doplerradar authors.
syntax = "proto3";

option go_package = "proto";
option java_multiple_files = true;
option java_package = "pce.proto";
option java_outer_classname = "PCEProto";

package pceapiproto;

service PCE {
  rpc GetSessions (SessionsRequest) returns (SessionsReply) {}
  rpc GetLSPs (LSPRequest) returns (LSPReply) {}
  rpc StopBGP (StopBGPRequest) returns (StopBGPReplay) {}
  rpc StartBGP (StartBGPRequest) returns (StartBGPReplay) {}
}

message StartBGPRequest {}

message StartBGPReplay {}

message StopBGPRequest {}

message StopBGPReplay {}

message SessionsRequest {
  string pccName  = 1;
}

message Session {
  string ID  = 1;
  uint64 MsgCount = 2;
  int32  State = 3;
  string address = 4;
  uint32 Keepalive = 5;    
	uint32 DeadTimer = 6;    
}

message SessionsReply {
  repeated Session sessions = 1;
}

message LSPRequest {
  string pccName  = 1;
}

message LSP {
	bool Delegate       = 1;     
	bool Sync           = 2;     
	bool Remove         = 3;     
	bool Admin          = 4;     
	uint32 Oper         = 5; 
	string Name         = 6;      
	string Src          = 7;      
	string Dst          = 8;      
	// EROList      []EROSub
	// SREROList    []*SREROSub
	// SRRROList    []*SRRROSub
	uint32 SetupPrio    = 9;    
	uint32 HoldPrio     = 10;    
	bool   LocalProtect = 11; 
	uint32 BW           = 12;   
	uint32 PLSPID       = 13;   
	uint32 LSPID        = 14;  
	// IPv4ID       *LSPIPv4Identifiers
	// IPv6ID       *LSPIPv6Identifiers
	uint32 SRPID        = 15;   
	uint32 ExcludeAny   = 16;   
	uint32 IncludeAny   = 17;   
	uint32 IncludeAll   = 18;   
}

message LSPReply {
  repeated LSP LSPs = 1;
}